--- a/MicrobitBLE/packages.config
+++ b/MicrobitBLE/packages.config
@@ -8,6 +8,7 @@
   <package id="Plugin.Permissions" version="1.1.7" targetFramework="portable45-net45+win8+wp8" />
   <package id="rda.SocketsForPCL" version="1.2.2" targetFramework="portable45-net45+win8+wp8" />
   <package id="WebSocket.Portable.Core" version="1.2.6" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Websockets.Pcl" version="1.1.9" targetFramework="portable45-net45+win8+wp8" developmentDependency="true" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="portable45-net45+win8+wp8" />
   <package id="XamarinBluetoothLE" version="1.0.0" targetFramework="portable45-net45+win8+wp8" />
 </packages>
